checkpatch-results/home/fedora/lkml-analysis/lkml/1/0000449901.e10aeb39c1d3567f1906ca36162c977c1b7c0672
WARNING:COMMIT_LOG_LONG_LINE: Possible unwrapped commit description (prefer a maximum 75 chars per line)
#38: 
> > include/linux/kexec.h:148: error: variable-size type declared outside of any function

WARNING:TYPO_SPELLING: 'alocated' may be misspelled - perhaps 'allocated'?
#70: 
another if they ended up being alocated sequentially by kmalloc,
                               ^^^^^^^^

Some words may have been misspelled.  Consider reviewing them.

WARNING:BAD_SIGN_OFF: Use a single space after Acked-by:
#82: 
Acked-by:  Vivek Goyal <vgoyal@in.ibm.com>

The signed-off-by line does not fall in line with the standards
specified by the community.

See: https://www.kernel.org/doc/html/latest/process/submitting-patches.html#developer-s-certificate-of-origin-1-1

WARNING:BLOCK_COMMENT_STYLE: Block comments use a trailing */ on a separate line
#133: FILE: include/linux/kexec.h:44:
+ * for the terminating note header */

The comment style is incorrect.  The preferred style for multi-
line comments is::

  /*
  * This is the preferred style
  * for multi line comments.
  */

The networking comment style is a bit different, with the first line
not empty like the former::

  /* This is the preferred comment style
  * for files in net/ and drivers/net/
  */

See: https://www.kernel.org/doc/html/latest/process/coding-style.html#commenting

ERROR:SPACING: space prohibited after that open parenthesis '('
#134: FILE: include/linux/kexec.h:45:
+#define KEXEC_NOTE_BYTES ( (KEXEC_NOTE_HEAD_BYTES * 2) + \

Whitespace style used in the kernel sources is described in kernel docs.

See: https://www.kernel.org/doc/html/latest/process/coding-style.html#spaces

ERROR:SPACING: space prohibited before that close parenthesis ')'
#135: FILE: include/linux/kexec.h:46:
+			   KEXEC_NOTE_NAME_BYTES + KEXEC_NOTE_DESC_BYTES )

CHECK:SPACING: spaces preferred around that '/' (ctx:VxV)
#145: FILE: include/linux/kexec.h:153:
+typedef u32 note_buf_t[KEXEC_NOTE_BYTES/4];
                                        ^

CHECK:PARENTHESIS_ALIGNMENT: Alignment should match open parenthesis
#250: FILE: arch/ia64/kernel/crash.c:78:
+	buf = append_elf_note(buf, KEXEC_NOTE_NAME, NT_PRSTATUS, prstatus,
 			sizeof(*prstatus));

CHECK:PARENTHESIS_ALIGNMENT: Alignment should match open parenthesis
#263: FILE: kernel/kexec.c:1122:
+	buf = append_elf_note(buf, KEXEC_NOTE_NAME, NT_PRSTATUS, &prstatus,
 				sizeof(prstatus));

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000449901.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 total: 2 errors, 4 warnings, 3 checks, 114 lines checked

NOTE: For some of the reported defects, checkpatch may be able to
      mechanically convert to the typical style using --fix or --fix-inplace.

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000449901.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 has style problems, please review.

NOTE: If any of the errors are false positives, please report
      them to the maintainer, see CHECKPATCH in MAINTAINERS.
